Reverted to JDK 1.8